Updated fragment related code in MainActivity, activity_main, album_listview and fragment_album

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,14 @@
         android:dividerHeight="20.0sp"
     ></ListView>
 
+    <LinearLayout
+        android:id="@+id/fragment_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:orientation="horizontal"></LinearLayout>
+
+
 
 
 
