--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -16,7 +16,7 @@
         android:id="@+id/title1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:text="Album ID"
 
         android:gravity="center"
         android:textSize="30sp"></TextView>
