--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,21 @@
 
     <TextView
         android:id="@+id/title"
+        android:text="User Info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-
         android:gravity="center"
         android:textSize="30sp"></TextView>
 
-    <ListView
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+
+        ></FrameLayout>
+
+    <!--<ListView
         android:id="@+id/listView"
         android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
@@ -29,21 +36,7 @@
         android:background="#0009ff"
         android:divider="@android:color/white"
         android:dividerHeight="20.0sp"
-    ></ListView>
-
-    <LinearLayout
-        android:id="@+id/fragment_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:orientation="horizontal"></LinearLayout>
-
-
-
-
-
-
-
+    ></ListView>-->
 
 </LinearLayout>
 
