--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -3,17 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_200"
-    android:layout_marginBottom="600dp"
+    android:layout_marginBottom="550dp"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:layout_marginTop="50dp"
+    android:id="@+id/userInfo"
     android:orientation="vertical">
-
 
     <TextView
         android:id="@+id/id"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="54dp"
         android:gravity="center"
         android:text="ID"></TextView>
 
@@ -21,22 +21,22 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/name"
-        android:text="Name"></TextView>
+        android:gravity="left"
+        android:text="Name:"></TextView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/email"
-        android:text="Email"></TextView>
+        android:gravity="left"
+        android:text="Email:"></TextView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/phone"
-        android:text="Phone"></TextView>
-
-
-
-
+        android:gravity="left"
+        android:text="Phone:"></TextView>
 
 </LinearLayout>
+
