--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/purple_200"
     android:layout_marginBottom="50dp"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:layout_marginTop="50dp"
-    android:id="@+id/albumView"
-    tools:context=".AlbumFragment">
-
-
-    <TextView
-        android:id="@+id/title1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Album ID"
-
-        android:gravity="center"
-        android:textSize="30sp"></TextView>
+    android:orientation="vertical">
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/userList"
         android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
         android:layout_height="652dp"
         android:background="#0009ff"
         android:divider="@android:color/white"
         android:dividerHeight="20.0sp"
-        ></ListView>
-
-
+    ></ListView>
 
 </LinearLayout>
