Added viewholder in album adapter

--- a/app/src/main/res/layout/album_list.xml
+++ b/app/src/main/res/layout/album_list.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="50dp"
     android:orientation="vertical">
 
-    <!--<ListView
+    <ListView
         android:id="@+id/albumList"
 
         android:layout_width="match_parent"
@@ -17,12 +17,8 @@
 
         android:divider="@android:color/white"
         android:dividerHeight="20.0sp"
-        ></ListView>-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TESTING"
-        ></TextView>
+        ></ListView>
+
 
 
 </LinearLayout>
