--- a/app/src/main/res/layout/album_info.xml
+++ b/app/src/main/res/layout/album_info.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/purple_200"
     android:layout_marginBottom="550dp"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:layout_marginTop="50dp"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
 
 
     <ImageView
-        android:layout_width="150sp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
 
         android:id="@+id/albumImage"
         ></ImageView>
